# k8s-gerrit

./: .bazelrc  .gitignore  .mailmap  .pylintrc  BUILD.bazel  CLAUDE.md  Jenkinsfile  LICENSE  MODULE.bazel  Pipfile  README.md  b.sh  build  configure  get_version.sh  groups  keystore-exception-ldap.txt  keystore-exception-oauth.txt  maven_install.json  project.config  publish  requirements.txt  reviewers.config  setup.cfg  start  test
container-images/apache-git-http-backend/: BUILD.bazel  Dockerfile  README.md  apko.lock.json  apko.part.yaml  git-http-backend.conf  git-https-backend.conf  start
container-images/apache-git-http-backend/config/: envvars  git-http-backend.conf  git-https-backend.conf  httpd.conf
container-images/apache-git-http-backend/tools/: create_repo.sh  project_admin.sh  start  verify_fs_permissions
container-images/fetch-job/: BUILD.bazel  Dockerfile  README.md  apko.lock.json  apko.part.yaml  fetch-config.example.yaml  requirements.txt
container-images/fetch-job/dependencies/: Pipfile
container-images/fetch-job/tools/: fetch-job.py  fetch-job.sh
container-images/gerrit/: BUILD.bazel  Dockerfile  README.md  apko.lock.json
container-images/gerrit-base/: BUILD.bazel  Dockerfile  README.md  apko.part.yaml
container-images/gerrit-init/: .dockerignore  BUILD.bazel  Dockerfile  README.md  apko.lock.json  apko.part.yaml  requirements.in  requirements.txt  start
container-images/gerrit-init/config/: default.config.yaml
container-images/gerrit-init/dependencies/: Pipfile
container-images/gerrit-init/tools/: Pipfile  download_plugins.py  gerrit-init.py  gerrit-prepper.spec  gerrit_init.py  gerrit_reindex.py  git_config_parser.py  init_config.py  log.py  logger.py  multioptconfigparser.py  read_gerrit_config.py  start  validate_db.py  validate_notedb.py  verify_fs_permissions
container-images/gerrit-init/tools/gerrit-initializer/: BUILD.bazel  gerrit_initializer.py  main.py
container-images/gerrit-init/tools/gerrit-initializer/initializer/: constants.py
container-images/gerrit-init/tools/gerrit-initializer/initializer/config/: cluster_mode.py  init_config.py
container-images/gerrit-init/tools/gerrit-initializer/initializer/helpers/: git.py  git_config_witer.py
container-images/gerrit-init/tools/gerrit-initializer/initializer/tasks/: download_plugins.py  init.py  init_ha.py  init_multisite.py  pull_replication_configurator.py  reindex.py  validate_notedb.py
container-images/gerrit-init/tools/gerrit-prepper/: __main__.py  gerrit_prepper.py
container-images/gerrit-init/tools/gerrit-prepper/prepper/helpers/: git.py  log.py
container-images/gerrit-init/tools/gerrit-prepper/prepper/tasks/: init.py  validate_db.py  validate_notedb.py
container-images/gerrit/etc/: security.properties
container-images/gerrit/tools/: start
container-images/git-gc/: BUILD.bazel  Dockerfile  README.md  apko.lock.json  apko.part.yaml  start
container-images/git-gc/cron/: crontab
container-images/git-gc/tools/: gc-all.sh  gc.sh  git-gc-preserve  start
operator/: .gitignore  BUILD.bazel  README.md  container-structure-test.yaml  pom.xml  test.properties
operator/gerrit-operator/: pom.xml
operator/gerrit-operator-api/: pom.xml
operator/gerrit-operator-api/src/main/java/com/google/gerrit/k8s/operator/: Constants.java
operator/gerrit-operator/src/main/java/com/google/gerrit/k8s/operator/: GerritOperator.java  Main.java  OperatorModule.java
operator/helm-charts/gerrit-operator/: Chart.yaml  values.yaml
operator/helm-charts/gerrit-operator-crds/: Chart.yaml
operator/helm-charts/gerrit-operator/templates/: operator.yaml  rbac.yaml
operator/k8s/: cluster.sample.yaml  gerrit.sample.yaml  gerritNetwork.sample.yaml  gitgc.sample.yaml  operator.yaml  receiver.sample.yaml  site.sample.yaml
operator/k8s/operator/: operator.yaml  rbac.yaml
operator/src/main/java/com/google/gerrit/k8s/operator/: Constants.java  EnvModule.java  GerritClusterMemberDependentResource.java  GerritOperator.java  GitGarbageCollection.java  GitGarbageCollectionConflictException.java  GitGarbageCollectionReconciler.java  GitGarbageCollectionSpec.java  GitGarbageCollectionStatus.java  GitGc.java  GitGcConflictException.java  GitGcReconciler.java  GitGcSpec.java  GitGcStatus.java  LifecycleManager.java  Main.java  OperatorContext.java  OperatorModule.java  PodNameEnvVar.java  ReconcilerSet.java  ReconcilerSetProvider.java
operator/src/main/java/com/google/gerrit/k8s/operator/admission/: AbstractValidationWebhookConfigApplier.java  AdmissionWebhookModule.java  GerritClusterValidationWebhookConfigApplier.java  GerritValidationWebhookConfigApplier.java  GitGcValidationWebhookConfigApplier.java  ValidationWebhookConfigApplier.java  ValidationWebhookConfigs.java
operator/src/main/java/com/google/gerrit/k8s/operator/cluster/: AccountDeactivationReconciler.java  BusyBoxImage.java  DependentGitGarbageCollectionList.java  GerritCluster.java  GerritClusterAbstractReconciler.java  GerritClusterDependentResourceNameDiscriminator.java  GerritClusterLabelFactory.java  GerritClusterMember.java  GerritClusterMemberDependentResource.java  GerritClusterMemberSpec.java  GerritClusterMultisite.java  GerritClusterMultisiteReconciler.java  GerritClusterNoSharedFSReconciler.java  GerritClusterReconciler.java  GerritClusterSpec.java  GerritClusterStatus.java  GerritIngress.java  GerritIngressCondition.java  GerritIngressConfig.java  GerritIngressTlsConfig.java  GerritIstioCondition.java  GerritIstioGateway.java  GerritIstioSSHCondition.java  GerritIstioVirtualService.java  GerritIstioVirtualServiceDiscriminator.java  GerritIstioVirtualServiceSSH.java  GerritLogsPVC.java  GerritLogsPVCDiscriminator.java  GerritRepositoryConfig.java  GerritSSHCondition.java  GerritTemplate.java  GitRepositoriesPVC.java  GitRepositoriesPVCDiscriminator.java  GitRepositoryStorage.java  IngressConfig.java  (+16 more)
operator/src/main/resources/crd/: emissary-crds.yaml
operator/src/test/java/com/google/gerrit/k8s/operator/: GitGarbageCollectionE2E.java  GitGcE2E.java
operator/tools/: combineCRDVersions  newCRDVersion
(+1348 files in other folders)
