load("@aspect_bazel_lib//lib:yq.bzl", "yq")
load("@rules_apko//apko:defs.bzl", "apko_image", "apko_lock")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push", "oci_tarball")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

yq(
    name = "merge-base",
    srcs = [
        "apko.part.yaml",
        "//container-images/base:apko.part.yaml",
    ],
    outs = ["apko.yaml"],
    expression = ". as $item ireduce ({}; . *+ $item )",
)

apko_lock(
    name = "lock",
    config = ":merge-base",
    lockfile_name = "apko.lock.json",
)

apko_image(
    name = "apko-apache-git-http-backend",
    architecture = select({
        "@platforms//cpu:arm64": "arm64",
        "@platforms//cpu:x86_64": "amd64",
    }),
    config = "apko.yaml",
    contents = "@apache-git-http-backend_lock//:contents",
    tag = "apache-git-http-backend:latest",
)

pkg_tar(
    name = "git-http-backend-conf_layer",
    srcs = ["config/git-http-backend.conf"],
    package_dir = "/etc/apache2/conf.d",
)

pkg_tar(
    name = "envvars_layer",
    srcs = ["config/envvars"],
    package_dir = "/usr/sbin",
)

pkg_tar(
    name = "httpd-conf_layer",
    srcs = ["config/httpd.conf"],
    package_dir = "/etc/apache2",
)

pkg_tar(
    name = "logrotation_layer",
    srcs = ["config/logrotation"],
    package_dir = "/etc/logrotate.d",
)

pkg_tar(
    name = "start-script_layer",
    srcs = ["tools/start"],
    package_dir = "/var/tools",
)

pkg_tar(
    name = "project-admin-cgi_layer",
    srcs = ["tools/project_admin.sh"],
    package_dir = "/var/cgi",
)

oci_image(
    name = "apache-git-http-backend",
    base = ":apko-apache-git-http-backend",
    entrypoint = [
        "ash",
        "/var/tools/start",
    ],
    tars = [
        ":git-http-backend-conf_layer",
        ":envvars_layer",
        ":httpd-conf_layer",
        ":logrotation_layer",
        ":start-script_layer",
        ":project-admin-cgi_layer",
    ],
)

oci_tarball(
    name = "build",
    image = ":apache-git-http-backend",
    repo_tags = ["apache-git-http-backend:latest"],
    visibility = ["//visibility:public"],
)

oci_push(
    name = "publish",
    image = ":apache-git-http-backend",
    repository = "docker.io/k8sgerrit/apache-git-http-backend",
    remote_tags = "//:full-version",
    visibility = ["//visibility:public"],
)
